k8s/wake-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wake-proxy
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wake-proxy
  template:
    metadata:
      labels:
        app: wake-proxy
    spec:
      serviceAccountName: wake-service
      containers:
      - name: wake-proxy
        image: ghcr.io/medotarek73/k8s-wake-proxy:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "20m"
            memory: "32Mi"
          limits:
            cpu: "100m"
            memory: "64Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: wake-proxy
  namespace: kube-system
spec:
  selector:
    app: wake-proxy
  ports:
  - port: 80
    targetPort: 8080
